# ai-lab

./: .gitignore  README.md  pyproject.toml  requirements.tx  requirements.txt  setup.py
.amazonq/rules/: commit_rules.md  development.md  interaction_rules.md  project-rules.md  project_consistency.md
models/: .gitkeep
notebooks/bedrock/agentcore/: client_test.ipynb  deployment.ipynb
notebooks/mlx/conversion/: model_conversion.ipynb
notebooks/mlx/quantization/: model_quantization.ipynb
notebooks/mlx/tasks/: conversion.ipynb  text_generation.ipynb  upload.ipynb
notebooks/strands_agents/: a2a_client.ipynb  agent.ipynb  async_streaming.ipynb  auto_tools.ipynb  basic.ipynb  class_based_tools.ipynb  hooks.ipynb  mcp_client.ipynb  multimodal.ipynb  multimodal_agent.ipynb  session.ipynb  session_agent.ipynb  streaming.ipynb  swarm.ipynb  tool_streaming.ipynb
notebooks/strands_agents/a2a/: a2a_agent_tool.ipynb  a2a_client.ipynb  a2a_server.ipynb  a2a_streaming_client.ipynb  a2a_tool.ipynb
notebooks/strands_agents/advanced/: conversation_manager.ipynb  structured_output.ipynb
notebooks/strands_agents/basics/: basic.ipynb  hooks.ipynb  multimodal.ipynb  session.ipynb  streaming.ipynb
notebooks/strands_agents/core/: basic.ipynb  hooks.ipynb  multimodal.ipynb  streaming.ipynb
notebooks/strands_agents/features/: conversation_manager.ipynb  structured_output.ipynb
notebooks/strands_agents/mcp/: mcp_client.ipynb
notebooks/strands_agents/multi_agent/: graph.ipynb
scripts/: mcp_server.py
src/a2a_lab/: server.py
src/mcp_lab/: __init__.py
(+35 files in other folders)
